--- a/src/app/blockchain-evote/user/voting-page/voting-page.component.html
+++ b/src/app/blockchain-evote/user/voting-page/voting-page.component.html
@@ -2,7 +2,7 @@
 <div class="card">
     <div class="card-container overflow-hidden">
         <div class="flex">
-            <div class="flex-1 flex flex-wrap align-items-center justify-content-center m-2 ">
+            <div class="flex-1 flex flex-wrap align-items-center justify-content-center m-2">
                 <p-panel header="รายละเอียดการเลือกตั้ง">
                     <div class="card">
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                 </p-panel>
-                <div class="flex m-3">
+                <div class="flex align-items-center justify-content-center m-3">
                     <p-panel header="ระยะเวลาและสถานะ">
                         <div class="card">
                             <div class="flex flex-wrap card-container blue-container " style="max-width: 100%">
@@ -77,12 +77,11 @@
         </div>
     </div>
 
-
-    <div class="flex align-items-center justify-content-center">
-        <div class="card-container overflow-hidden" style="min-width: 100%">
+    <div class="flex justify-content-center">
+        <div class="flex flex-wrap card-container m-2 justify-content-center" style="max-width: 80%">
             <p-panel header="รายชื่อผู้ลงสมัคร">
                 <div class="flex flex-wrap card-container align-items-center justify-content-center">
-                    <div class="flex m-2 card-container" style="max-width: 100%" *ngFor="let candidate of candidateList">
+                    <div class="flex m-2" *ngFor="let candidate of candidateList">
                         <p-card [style]="{width: '340px'}" styleClass="p-card-shadow">
                             <ng-template pTemplate="header">
                                 <div class="flex align-items-center justify-content-center">
@@ -108,6 +107,7 @@
         </div>
     </div>
 </div>
+
 <div style="margin-top:2%;"></div>
 <app-footer></app-footer>
 <p-confirmDialog [breakpoints]="{'960px': '75vw', '640px': '100vw'}" [style]="{width: '35vw'}" [baseZIndex]="10000" acceptButtonStyleClass="p-button-success" rejectButtonStyleClass="p-button-danger p-button-text"></p-confirmDialog>
