--- a/src/app/blockchain-evote/admin/create-election-admin/create-election-admin.component.html
+++ b/src/app/blockchain-evote/admin/create-election-admin/create-election-admin.component.html
@@ -4,14 +4,14 @@
         <div class="flex">
             <div class="flex-1 flex flex-wrap align-items-center justify-content-center m-2 px-5 py-3 border-round">
                 <p-panel header="รายละเอียดการเลือกตั้ง">
-                    <div class="card">
+                    <div class="card" [formGroup]="createForm">
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
                             <div class="flex-row align-items-start justify-content-start border-round" style="min-width: 100%; min-height: 100px">
                                 <div class="flex align-items-start justify-content-start border-round mb-2" style="min-width: 100%; min-height: 10px">
                                     <label for="Number" class="block text-xl"><b>ชื่อหัวข้อการเลือกตั้ง : </b></label>
                                 </div>
                                 <div class="flex align-items-center justify-content-start border-round" style="min-width: 100%px; min-height: 50px">
-                                    <input type="text" pInputText [style]="{width: '100%'}" />
+                                    <input type="text" pInputText [style]="{width: '100%'}" formControlName="elecName" />
                                 </div>
                             </div>
                         </div>
@@ -21,7 +21,7 @@
                                     <label for="Number" class="block text-xl"><b>รายละเอียดการเลือกตั้ง : </b></label>
                                 </div>
                                 <div class="flex align-items-center justify-content-start border-round" style="min-width: 100%px; min-height: 50px">
-                                    <textarea id="float-input" rows="5" cols="30" pInputTextarea [style]="{width: '100%'}"></textarea>
+                                    <textarea id="float-input" rows="5" cols="30" pInputTextarea [style]="{width: '100%'}" formControlName="elecDetail"></textarea>
                                 </div>
                             </div>
                         </div>
@@ -50,7 +50,7 @@
                                         <label for="Number" class="block"><b>เริ่มต้น : </b></label>
                                     </div>
                                     <div style="width: 100%">
-                                        <p-calendar [showIcon]="true" inputId="icon" [style]="{width: '100%'}" appendTo="body"></p-calendar>
+                                        <p-calendar [showIcon]="true" inputId="icon" [style]="{width: '100%'}" appendTo="body" [(ngModel)]="startDate"></p-calendar>
                                     </div>
                                 </div>
                             </div>
@@ -60,16 +60,16 @@
                                         <label for="Number " class="block"><b>สิ้นสุด : </b></label>
                                     </div>
                                     <div style="width: 100%">
-                                        <p-calendar [showIcon]="true " inputId="test" [style]="{width: '100%'}" appendTo="body"></p-calendar>
+                                        <p-calendar [showIcon]="true " inputId="test" [style]="{width: '100%'}" appendTo="body" [(ngModel)]="endDate"></p-calendar>
                                     </div>
                                 </div>
                             </div>
-                            <div class="flex flex-wrap card-container blue-container justify-content-center" style="max-width: 100% ">
+                            <div class="flex flex-wrap card-container blue-container justify-content-center" style="max-width: 100% " [formGroup]="createForm">
                                 <div class="flex align-items-center justify-content-start border-round mt-2 " style="min-width: 200px; min-height: 75px ">
                                     <i class="pi pi-check-circle " style="font-size: 1rem;margin-right: 5px; "></i>
                                     <label for="Number " class="block text-xl "><b>เปิดให้ลงทะเบียน : </b></label>
                                     <div class="flex align-items-center justify-content-start border-round mt-2 ml-2 " style="min-width: 20px; min-height: 75px ">
-                                        <p-inputSwitch (ngModel)="checked"></p-inputSwitch>
+                                        <p-inputSwitch formControlName="elecRegister"></p-inputSwitch>
                                     </div>
                                 </div>
                             </div>
@@ -82,8 +82,14 @@
     <div class="card-container overflow-hidden " style="max-width: 100% ">
         <div class="flex flex-wrap border-round m-2 justify-content-center ">
             <p-panel header="อัพโหลดรูปภาพ">
-                <img [src]="imageSrc" id="photo" [style]="{width: '180px',height: '200px'}">
                 <div class="flex flex-wrap card-container align-items-center justify-content-start ">
+                    <div *ngIf="imageSrc" class="flex m-2 ">
+                        <p-card [style]="{width: '340px'} " styleClass="p-card-shadow ">
+                            <img [src]="imageSrc" id="photo" [style]="{width: '300px',height: '300px'}">
+                            <ng-template pTemplate="footer ">
+                            </ng-template>
+                        </p-card>
+                    </div>
                     <label for="buttonClick">
                     <div class="flex m-2 blockCandidate align-items-center justify-content-center" style="width: 340px;height: 374.8px;cursor: pointer;">
                        <div class="flex-row">
@@ -102,8 +108,17 @@
         </div>
     </div>
     <div class="flex m-2 align-items-center justify-content-center">
-        <button pButton type="button" class="p-button buttonColor" label="สร้างการเลือกตั้ง" style="width: 20%;"></button>
+        <button pButton type="button" class="p-button buttonColor" label="สร้างการเลือกตั้ง" style="width: 20%;" (click)="create()"></button>
     </div>
 </div>
 <div style="margin-top:2%; "></div>
 <app-footer></app-footer>
+<p-toast></p-toast>
+<p-dialog [(visible)]="displayModal" [modal]="true" [style]="{width: '30vw'}" [breakpoints]="{'960px': '75vw', '640px': '80vw'}" [draggable]="false" [resizable]="false" [closable]="false" [transitionOptions]="'280ms'">
+    <div class="flex align-items-center justify-content-center" style="min-width: 100%; min-height: 50px ">
+        <img src="assets\img\icon\status_yes.png" height="65" width="65">
+    </div>
+    <div class="flex align-items-center justify-content-center mt-5 " style="min-width: 100%; min-height: 50px ">
+        <H1>สร้างการเลือกตั้งสำเร็จ</H1>
+    </div>
+</p-dialog>
